# fgm

./: .clang-format  .gitignore  AnimatedSprite.h  CMakeLists.txt  README.md  main.cpp
src/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.h  DrawManager.cpp  DrawManager.h  EventManager.cpp  EventManager.h  Person.cpp  Person.h  RenderManager.cpp  RenderManager.h  TileTextureProvider.cpp  TileTextureProvider.h  UpdateManager.cpp  UpdateManager.h  WorldGrid.cpp  WorldGrid.h  main.cpp
